[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Shark.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.0150433, -0.0230856, 0, 0, 0, 0, 1024, -0.00975752 )
}

[node name="main" type="Node"]
script = ExtResource( 2 )
Shark = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="SharkTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 530 )

[node name="SharkPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SharkPositionSpawn" type="PathFollow2D" parent="SharkPath"]
position = Vector2( -0.0150433, -0.0230856 )
rotation = 1.30156e-05
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
